fix: Modal z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -754,6 +754,7 @@ section, header {
   border-radius: 4px;
   position: relative;
   max-width: 400px;
+  z-index: 10;
   max-height: 400px;
   position: relative;
 }
